# transle

./: .env  .env.template  .external_zip_url  .gitignore  README.md  pubspec.yaml  requirements.txt
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
automate/: __main__.py  configure_launch.py  download_external_source.py  generate_bridge.py  load_env.py  set_name_and_domain.py  update_dev_config.py
automate/template/: ffi_dart.txt  vscode_launch_json.txt  windows_rust_cmake.txt
bridge/: Cargo.toml
bridge/api/: Cargo.toml
bridge/api/src/: api.rs  bridge_generated.rs  lib.rs
bridge/frb_rust/src/: thread.rs
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  app_state.dart  main.dart
lib/bridge/: bridge_generated.dart  ffi.dart
lib/bridge/first_crate/: bridge_generated.dart  ffi.dart
lib/bridge/second_crate/: bridge_generated.dart  ffi.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
native/: Cargo.toml
native/bridge/: Cargo.toml
native/bridge/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
native/first_crate/: Cargo.toml
native/first_crate/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  lib.rs
native/second_crate/: Cargo.toml
native/second_crate/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  lib.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt  rust.cmake
windows/runner/: Runner.rc  main.cpp
(+2 files in other folders)
