[workspace]
members = ["api", "frb_rust", "frb_macros"]

[workspace.package]
version = "1.62.0"
edition = "2018"
license = "MIT"
description = "High-level memory-safe binding generator for Flutter/Dart <-> Rust"
repository = "https://github.com/fzyzcjy/flutter_rust_bridge"
keywords = ["flutter", "dart", "ffi", "code-generation", "bindings"]
categories = ["development-tools::ffi"]

[workspace.dependencies]
allo-isolate = { version = "0.1.14-beta.3", features = ["anyhow"] }
anyhow = "1.0.64"
chrono = "0.4.23"
lazy_static = "1.4.0"
uuid = "1.1.2"

flutter_rust_bridge_macros = { path = "frb_macros", version = "1" }
flutter_rust_bridge = { path = "frb_rust", default-features = false, version = "1" }

[profile.release]
strip = "debuginfo"
lto = "thin"
