[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { workspace = true }
flutter_rust_bridge_macros = { workspace = true }
flutter_rust_bridge = { workspace = true }

[lib]
crate-type = ["staticlib", "cdylib"]
